# chRAWma

./: CMakeLists.txt  README.md  graph_widget.cpp  main.cpp
aces-config/: config.ocio
cmake/modules/: FindLensfun.cmake  FindOpenColorIO.cmake
imgui-lib/: CMakeLists.txt  imfilebrowser.cpp  imgui_demo.cpp  imgui_filebrowser.cpp  imgui_filebrowser.h  imgui_window_sdl.cpp  imgui_window_sdl.h
imgui-lib/backends/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl.cpp  imgui_impl_sdl.h
imgui_extra-lib/: CMakeLists.txt  graph_editor.cpp  graph_editor.h  imfilebrowser.cpp  imfilebrowser.h  imgui.ini  imgui_extras.h  imgui_window_sdl.cpp  imgui_window_sdl.h
processing-lib/: CMakeLists.txt  blur_processor.cpp  blur_processor.h  lens_correction.cpp  lens_correction.h  ocio_processing.cpp  ocio_processing.h  ocio_processor.cpp  ocio_processor.h  scale_processor.cpp  scale_processor.h
raw-lib/: CMakeLists.txt  dng_convert.cpp  dng_convert.h  dng_video.cpp  libmlv.cpp  libmlv.h  mlv_video.cpp  mlv_video.h  video.cpp  video.h
raw-lib/idt/: dng_idt.cpp  dng_idt.h
raw-lib/mlv-lib/: CMakeLists.txt  video_mlv.c
raw-lib/mlv-lib/dng/: dng.c  dng.h
raw-lib/mlv-lib/llrawproc/: darkframe.c  darkframe.h  llrawproc.c
scope-lib/: CMakeLists.txt  histogram_monitor.cpp  histogram_monitor.h  vector_monitor.cpp  vector_monitor.h  waveform_monitor.cpp  waveform_monitor.h
utils/: 3dlut.cpp  3dlut.h  CMakeLists.txt  callback.h  glsl_shader.cpp  glsl_shader.h  socket_notifier.h  texture2D.cpp  texture2D.h  thread.cpp  thread.h  timer.cpp  timer.h
