cmake_minimum_required(VERSION 3.16)

PROJECT(elec)

set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules)

FIND_PACKAGE(SDL2 REQUIRED)
FIND_PACKAGE(OpenMP REQUIRED)
FIND_PACKAGE(LibRaw REQUIRED)
FIND_PACKAGE(OpenColorIO REQUIRED)
FIND_PACKAGE(Eigen3 REQUIRED)
FIND_PACKAGE(Ceres REQUIRED)
FIND_PACKAGE(Lensfun REQUIRED)

if (OPENMP_FOUND)
    SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    SET (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()

ADD_DEFINITIONS (-DSTDOUT_SILENT)
#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3")
ADD_DEFINITIONS(-std=gnu++17)

MESSAGE(NOTICE "--> Libraw version ${LibRaw_VERSION_STRING} ${LibRaw_LIBRARIES} ${LibRaw_DEFINITIONS}")
MESSAGE(NOTICE "OpenMP CXX FLAGS : ${OpenMP_CXX_FLAGS}")
MESSAGE(NOTICE "OpenMP C FLAGS : ${OpenMP_C_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")

MESSAGE(NOTICE "LENSFUN CONFIG : ${LensFun_LIBRARIES} ${LensFun_INCLUDE_DIRS}")

ADD_SUBDIRECTORY(imgui-lib)
ADD_SUBDIRECTORY(imgui_extra-lib)
ADD_SUBDIRECTORY(raw-lib)
ADD_SUBDIRECTORY(scope-lib)
ADD_SUBDIRECTORY(processing-lib)
ADD_SUBDIRECTORY(utils)

SET(EXT_LIBS usb-1.0 GL GLEW pthread ${SDL2_LIBRARIES} ${LibRaw_LIBRARIES} ${OPENCOLORIO_LIBRARIES} ${LensFun_LIBRARIES} )

ADD_EXECUTABLE(chrawma.bin main.cpp)
TARGET_LINK_LIBRARIES(chrawma.bin imgui_extra_static imgui_static scopes_static utils_static processing_static rawlib_static mlvlib_static ${EXT_LIBS})

INSTALL(TARGETS chrawma.bin RUNTIME DESTINATION bin)